--- a/checkers-app/build.gradle
+++ b/checkers-app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'java'
 
 dependencies {
-
+    compile project(':checkers-models')
+    compile project(':checkers-views')
+    compile project(':checkers-controllers')
 }
