--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ subprojects {
     ext {
         SLF4J_VERSION = "1.7.10"
         JUNIT_VERSION = "4.12"
+        CHECKSTYLE_VERSION = "8.0"
     }
 
     dependencyManagement {
@@ -54,7 +55,6 @@ subprojects {
         reports {
             xml.enabled false
             html.enabled true
-            //html.stylesheet resources.text.fromFile('config/xsl/findbugs-custom.xsl')
         }
     }
 
@@ -62,7 +62,13 @@ subprojects {
         reports {
             xml.enabled false
             html.enabled true
-            //resources.text.fromFile('config/checkstyle/checkstyle.xml')
+        }
+    }
+
+    tasks.withType(Pmd) {
+        reports {
+            xml.enabled false
+            html.enabled true
         }
     }
 
@@ -83,8 +89,7 @@ subprojects {
     }
 
     checkstyle {
-        toolVersion = "8.0"
+        toolVersion = CHECKSTYLE_VERSION
         config = rootProject.resources.text.fromFile("config/checkstyle/checkstyle.xml")
     }
-
 }
