--- a/checkers-views/build.gradle
+++ b/checkers-views/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'java'
 
 dependencies {
-    compile project(':checkers-models')
-    compile project(':checkers-controllers')
+    compile project ( ':checkers-models' )
+    compile project ( ':checkers-controllers' )
+    compile project ( ':checkers-core' )
 }
