--- a/checkers-app/build.gradle
+++ b/checkers-app/build.gradle
@@ -2,4 +2,6 @@ apply plugin: 'java'
 
 dependencies {
     compile project(':checkers-views')
+    compile project(':checkers-models')
+    compile project(':checkers-controllers')
 }
