--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,8 @@ subprojects {
     apply plugin: 'idea'
     apply plugin: 'eclipse'
     apply plugin: 'checkstyle'
-    apply plugin: 'pmd'
-    apply plugin: 'findbugs'
+    //apply plugin: 'pmd'
+   // apply plugin: 'findbugs'
     apply plugin: "net.saliman.cobertura"
     apply plugin: 'io.spring.dependency-management'
 
@@ -50,13 +50,13 @@ subprojects {
             mavenBom 'io.spring.platform:platform-bom:1.1.2.RELEASE'
         }
     }
-
+/*
     tasks.withType(FindBugs) {
         reports {
             xml.enabled false
             html.enabled true
         }
-    }
+    }*/
 
     tasks.withType(Checkstyle) {
         reports {
@@ -64,14 +64,14 @@ subprojects {
             html.enabled true
         }
     }
-
+/*
     tasks.withType(Pmd) {
         reports {
             xml.enabled false
             html.enabled true
         }
     }
-
+*/
     task fatJar(type: Jar) {
         manifest {
             //attributes 'Main-Class': 'com.Main'
