Modifying build.gradle file to fix error: - Could not find or load main class org.gradle.wrapper.GradleWrapperMain
This during CI pipeline execution.

--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,10 @@ subprojects {
     }
 }
 
+task wrapper(type: Wrapper) {
+    gradleVersion = '4.0'
+}
+
 subprojects.each { subproject -> evaluationDependsOn(subproject.path)}
 
 task allJar(type: Jar, dependsOn: subprojects.assemble) {
