--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ before_script:
 #  - echo `pwd` # debug
 #  - echo "$CI_BUILD_NAME, $CI_BUILD_REF_NAME $CI_BUILD_STAGE" # debug
   - chmod +x gradlew
-  - wrapper
+  - gradle wrapper
   - export GRADLE_USER_HOME=`pwd`/.gradle
 
 cache:
