Modifying YAML file to fix errors. This during CI pipeline execution.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,10 @@
 image: java:8-jdk
 
+language: java
+jdk:
+  - oraclejdk8
+  - openjdk8
+
 stages:
   - build
   - test
@@ -9,8 +14,6 @@ before_script:
 #  - echo `pwd` # debug
 #  - echo "$CI_BUILD_NAME, $CI_BUILD_REF_NAME $CI_BUILD_STAGE" # debug
   - chmod +x gradlew
-  - ./gradle wrapper
-  - export GRADLE_USER_HOME=`pwd`/.gradle
 
 cache:
   paths:
