--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,21 +7,17 @@ stages:
 before_script:
   - chmod +x gradlew
 
-build:
+build-project:
   stage: build
   script:
     - ./gradlew build
   only:
     - develop, feature/CHK-013-GitLab-CI-CD
 
-package:
+package-jar:
   stage: package
   script:
     - ./gradlew allJar
-  artifacts:
-  paths:
-    - build/libs/*.jar
-  expire_in: 1 week
 
 after_script:
-  - echo "Checkers is up!"
+  - echo "Checkers is up"
