--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,23 +1,15 @@
 image: java:8-jdk
 
-stages:
-  - build
-  - package
-
 before_script:
   - chmod +x gradlew
+  - ./gradle --version
 
 build-project:
-  stage: build
   script:
     - ./gradlew build
+    - ./gradlew allJar
   only:
     - develop, feature/CHK-013-GitLab-CI-CD
-
-package-jar:
-  stage: package
-  script:
-    - ./gradlew allJar
 
 after_script:
   - echo "Checkers is up"
