Adding command in order to install gradle, and a artifact.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,8 @@ build-project:
   script:
     - ./gradlew build
     - ./gradlew allJar
+  artifacts:
+    expire_in: 1 week
   only:
     - develop, feature/CHK-013-GitLab-CI-CD
 
