changing stage name

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ before_script:
   - sdk install gradle 4.0.1
   - chmod +x gradlew
 
-build-project:
+build_project:
   script:
     - ./gradlew build
     - ./gradlew allJar
