--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,11 @@ stages:
   - package
 
 before_script:
-  - sdk install gradle 4.0.1
+  - wget https://services.gradle.org/distributions/gradle-4.0.1-bin.zip
+  - mkdir /opt/gradle
+  - unzip -d /opt/gradle gradle-4.0.1-bin.zip
+  - export PATH=$PATH:/opt/gradle/gradle-4.0.1/bin
+  - gradle -v
   - chmod +x gradlew
 
 build-project:
