This configuration should work for all branches. A jar file is created during deploy and it expires on 1 week.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,8 +21,8 @@ deploy:
   stage: deploy
   script:
     - ./gradlew allJar
-  only:
-    - develop
+  artifacts:
+    expire_in: 1 week
 
 after_script:
   - echo "Checkers is up!"
