--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
 image: java:8-jdk
 
 stages:
-  - build
-  - deploy
+  - build-project
+  - deploy-project
 
 before_script:
   - wget https://services.gradle.org/distributions/gradle-4.0.1-bin.zip
@@ -12,13 +12,13 @@ before_script:
   - gradle wrapper
   - chmod +x gradlew
 
-build:
-  stage: build
+build-project:
+  stage: build-project
   script:
     - ./gradlew build
 
-deploy:
-  stage: deploy
+deploy-project:
+  stage: deploy-project
   script:
     - ./gradlew allJar
   artifacts:
