--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: java:8-jdk
 
 stages:
-  - build
+  - setup
 
 before_script:
   - wget https://services.gradle.org/distributions/gradle-4.0.1-bin.zip
@@ -11,8 +11,8 @@ before_script:
   - gradle wrapper
   - chmod +x gradlew
 
-build:
-  stage: build
+setup:
+  stage: setup
   script:
     - ./gradlew build
     - ./gradlew allJar
