--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,9 @@
 image: java:8-jdk
 
 stages:
-  - allbuild
+  - build
+  - test
+  - deploy
 
 before_script:
   - wget https://services.gradle.org/distributions/gradle-4.0.1-bin.zip
@@ -11,10 +13,19 @@ before_script:
   - gradle wrapper
   - chmod +x gradlew
 
-allbuild:
-  stage: allbuild
+build:
+  stage: build
   script:
-    - ./gradlew build
+    - ./gradlew assemble
+
+test:
+  stage: build
+  script:
+    - ./gradlew check
+
+deploy:
+  stage: deploy
+  script:
     - ./gradlew allJar
   artifacts:
     expire_in: 1 week
